src/test/ui/invalid/invalid-macro-matcher.stderr
error: invalid macro matcher; matchers must be contained in balanced delimiters
  --> $DIR/invalid-macro-matcher.rs:14:5
   |
LL |     _ => (); //~ ERROR invalid macro matcher
   |     ^

error: aborting due to previous error

